fixing small documentation errors/formatting

--- a/README.Rmd
+++ b/README.Rmd
@@ -101,7 +101,7 @@ Below are the basic requirements for these data objects.
 *  ... have a column that contains character strings indicating the quadrat at which each observation was collected. This column must be a character data type. The function expects this column to be called "Quad", but a different name can be specified in function calls. 
 *  ... have a column that contains a value indicating the year when this individual observation was collected. This must be a numeric data type, and must be either a four or two digit year number. The function expects this column to be called "Year", but a different name can be specified in function calls. 
 *  ... have a column (almost always called "geometry" in the `sf` package data format) that contains a polygon representing the location of each observation. Each observation must be a `POLYGON` or `MULTIPOLYGON`. Data cannot be stored as `POINTS`.
-  +   If the data was collected such that forbs or small grasses were mapped as points and digitized as such, then these observations must be converted to polygons. We recommend that you convert them to small circular polygons with an identical radius. If you do this transformation, we also recommend that you include a column that indicates whether each row was originally mapped as apolygon or a point, since the demographic data that deals with size will be relatively meaningless for observations originally mapped as points.
+  +   If the data was collected such that forbs or small grasses were mapped as points and digitized as such, then these observations must be converted to polygons. We recommend that you convert them to small circular polygons with an identical radius. If you do this transformation, we also recommend that you include a column that indicates whether each row was originally mapped as a polygon or a point, since the demographic data that deals with size will be relatively meaningless for observations originally mapped as points.
   +   `dat` does not need to have a coordinate reference system (i.e. CRS can be "NA"), but it can have one if you'd like. 
 *  ... *not* have columns called "neighbors", "nearEdge",  "trackID", "age", "size_tplus1", "recruit", "survives_tplus1", "basalArea_ramet", or "basalArea_genet", since these columns are added by `plantTracker` functions.
 *  Note: Additional columns can be included in the input data.frame, although 
@@ -117,7 +117,7 @@ rownames(dataShow) <- NULL
 #knitr::kable(dataShow, caption = "**Table 1.1**: Example `dat` data.frame" )
 ```
 
-* Note: that the required columns are "Species", "Site", "Quad", "Year", and "geometry". The additional columns "Type" and "sp_code_6" are just "along forthe ride" in any analysis using `plantTracker` functions. 
+* Note: that the required columns are "Species", "Site", "Quad", "Year", and "geometry". The additional columns "Type" and "sp_code_6" are just "along for the ride" in any analysis using `plantTracker` functions. 
 
 Here's what some of the example `dat` data (from the "SG2" quadrat at the "AZ" site in 1922) look like when plotted spatially:
                                             
@@ -146,7 +146,7 @@ ggplot(data = exampleDat) +
         plot.margin = margin(1,0,1,0)) 
 ```
 
-It's important to note that, while `plantTracker` was designed to be used with small-scale maps of plant occurence in quadrats, it is conceivably possible to use other styles of map data in `plantTracker` functions. All that is required is a single mapped basal area (or point location converted to a small polygon) at each time point for each organism (or ramet), and is accompanied by the required metadata detailed above. For example, `plantTracker` functions could be used to estimate tree demographic rates at the scale of 100 m x 50 m plots.
+It's important to note that, while `plantTracker` was designed to be used with small-scale maps of plant occurrence in quadrats, it is conceivably possible to use other styles of map data in `plantTracker` functions. All that is required is a single mapped basal area (or point location converted to a small polygon) at each time point for each organism (or ramet), and is accompanied by the required metadata detailed above. For example, `plantTracker` functions could be used to estimate tree demographic rates at the scale of 100 m x 50 m plots.
 
 <a id="dat_to_sf"></a>
 
@@ -163,7 +163,7 @@ And the `sf` package more specifically:
 
 These resources provide a great orientation, and while I recommend looking over them if you're new to working with spatial data in R, I've included a brief tutorial for uploading shapefiles into R as `sf` data frames. 
 
-Most of the published chart-quadrat datasets have the map data stored as shapefiles in complex file structures, which can be a bit confusing to navigate. `plantTracker` requires all of your data (for all species, plots and years) to be in one single data frame, so this code shows how to navigate through a complex file structure to to pull out shapefiles and put them into one single `sf` data frame. For this exapmle, I'll use data from Central Plains Experimental Research Location in Colorado, which has been published in [this data paper](https://figshare.com/articles/dataset/Data_Paper_Data_Paper/3556779?backTo=/collections/Cover_density_and_demographics_of_shortgrass_steppe_plants_mapped_1997_2010_in_permanent_grazed_and_ungrazed_quadrats/3305970). In this dataset, shapefiles for each quadrat are stored in their own folder. Within that folder there are two shapefiles for each year: one that contains map data for polygons, and one that contains data for points. The following code reads in those shapefiles, transorms the points to polygons of a fixed radius, and puts all the data into one `sf` data frame. If you want to follow along, download the "shapefiles.zip" file from the data paper, un-zip it, and name it "CO_shapefiles". 
+Most of the published chart-quadrat datasets have the map data stored as shapefiles in complex file structures, which can be a bit confusing to navigate. `plantTracker` requires all of your data (for all species, plots and years) to be in one single data frame, so this code shows how to navigate through a complex file structure to to pull out shapefiles and put them into one single `sf` data frame. For this example, I'll use data from Central Plains Experimental Research Location in Colorado, which has been published in [this data paper](https://figshare.com/articles/dataset/Data_Paper_Data_Paper/3556779?backTo=/collections/Cover_density_and_demographics_of_shortgrass_steppe_plants_mapped_1997_2010_in_permanent_grazed_and_ungrazed_quadrats/3305970). In this dataset, shapefiles for each quadrat are stored in their own folder. Within that folder there are two shapefiles for each year: one that contains map data for polygons, and one that contains data for points. The following code reads in those shapefiles, transforms the points to polygons of a fixed radius, and puts all the data into one `sf` data frame. If you want to follow along, download the "shapefiles.zip" file from the data paper, un-zip it, and name it "CO_shapefiles". 
 ```{r, echo=FALSE, include=FALSE, eval = TRUE}
 # get the working directory name
 wdName <- c("/Users/Alice/Dropbox/Grad School/Research/Trait Project/Data/Adler Dowloaded Datasets/Adler_CO_Downloaded Data/")
@@ -503,7 +503,7 @@ ggplot(data = exampleDatIDs
 The following arguments to `trackSpp()` are only required in certain contexts. 
                                 
 * **`buffGenet`** is an argument that is only required if `clonal = TRUE` or if `clonal` is a data frame that contains at least a single `TRUE` in the "clonal" column. `buffGenet` is a numeric value that indicates how close polygons of the same species must be to one another in the first year in order to be considered parts of the same genetic individual (ramets of the same genet). Similar to `buff`, be very careful and conservative when defining this argument. A large value for `buffGenet` can quickly lead to the entire quadrat being treated as the same genetic individual! I suggest experimenting with multiple values of `buffGenet`, looking at maps that show the trackID assignment, and deciding on a value that leads to trackID assignments that make the most biological sense to you. This argument is passed to the `groupByGenet()` function, which assigns the same trackID to individuals that are within the `buffGenet` buffer of each other. Polygons are only grouped by genet in the first year of data. After that point, grouping by genet happens based on data in previous years. If there are multiple polygons that overlap with a genet in the previous year, they are given the same trackID and are considered ramets belonging to the same genet. The value of `buffGenet` must be greater than or equal to zero, and must be in the same units as the spatial data in `dat`. `buffGenet` can be a single numeric value which will be applied to all species present in `dat`, or can be specified uniquely for each species by creating a data frame that contains a `buffGenet` argument for each species (analogous to the data frame for the `dorm` argument shown in Table 2.1, but with a column called "buffGenet").
-* **`aggByGenet`** is a logical argument that is only required if `clonal = TRUE` or if `clonal` is a data frame that contains at least a single `TRUE` in the "clonal" column. This argument determines whether the output data frame from `trackSpp()` will have a row for every single ramet, or will be aggregated so that each genet is represented by a single row. If `aggByGenet = FALSE`, then the output is not aggregated. If `aggByGenet = TRUE` (the default etting), then the results are aggregated using the `plantTracker` function `aggregateByGenet()`. This function combines the `sf` "POLYGONS" for each ramet into one `sf` `MULTIPOLYGON` for the entire genet, and combines the associated metadata ("Species", "Site", "Quad", "Year", "trackID", "basalArea_genet", "age", "recruit", "survives_tplus1", "size_tplus1", "nearEdge") into one row for this genet. Even if the input `dat` had additional columns, they will not be included in the output of `trackSpp` if `aggByGenet = TRUE`, since it is uncertain if they can be summed across all ramets or are identical across all ramets. For example, if each ramet has a unique character string in a column called "name", there is no easy way to "sum" the character strings in this column to have one value for each genet. If you want the output data frame from `trackSpp()` to have the same columns as your input `dat` data.frame, set the `aggByGenet` argument to FALSE. However, Be Careful, since any demographicanalysis should be done with a data.set that has only one row per genet, otherwise you will be estimating survival and growth rates on the scale of ramets instead of genets. If you take the `aggByGenet = FALSE` route, be sure to pass your dataset through the `aggregateByGenet()` function (or  aggregate to the genet scale using your preferred method) before demographic analysis. 
+* **`aggByGenet`** is a logical argument that is only required if `clonal = TRUE` or if `clonal` is a data frame that contains at least a single `TRUE` in the "clonal" column. This argument determines whether the output data frame from `trackSpp()` will have a row for every single ramet, or will be aggregated so that each genet is represented by a single row. If `aggByGenet = FALSE`, then the output is not aggregated. If `aggByGenet = TRUE` (the default setting), then the results are aggregated using the `plantTracker` function `aggregateByGenet()`. This function combines the `sf` "POLYGONS" for each ramet into one `sf` `MULTIPOLYGON` for the entire genet, and combines the associated metadata ("Species", "Site", "Quad", "Year", "trackID", "basalArea_genet", "age", "recruit", "survives_tplus1", "size_tplus1", "nearEdge") into one row for this genet. Even if the input `dat` had additional columns, they will not be included in the output of `trackSpp` if `aggByGenet = TRUE`, since it is uncertain if they can be summed across all ramets or are identical across all ramets. For example, if each ramet has a unique character string in a column called "name", there is no easy way to "sum" the character strings in this column to have one value for each genet. If you want the output data frame from `trackSpp()` to have the same columns as your input `dat` data.frame, set the `aggByGenet` argument to FALSE. However, Be Careful, since any demographic analysis should be done with a data.set that has only one row per genet, otherwise you will be estimating survival and growth rates on the scale of ramets instead of genets. If you take the `aggByGenet = FALSE` route, be sure to pass your dataset through the `aggregateByGenet()` function (or  aggregate to the genet scale using your preferred method) before demographic analysis. 
 * **`species/site/quad/year/geometry`** These arguments only need to be included if the columns in `dat` that contain the data for species, site, quadrat, year and geometry of each observation are *different* from the names "Species", "Site", "Quad", "Year, and "geometry".  For example, if the column in your version of `dat` that contains the species identity of each observation is called "species_names", then the argument `species = "species_names"` must be included in your call to `trackSpp()`. 
 * **`printMessages`** This is an optional logical argument that determines whether this function returns messages about genet aggregation, as well as messages indicating which year is the last year of sampling in each quadrat and which year(s) come before a gap in sampling that exceeds the `dorm` argument (and thus which years of data have an "NA" for "survives_tplus1" and "size_tplus1"). If `printMessages = TRUE` (the default), then messages are printed. If `printMessages = FALSE`, then messages are not printed.
 * **`flagSuspects`** This is an optional logical argument of length 1, indicating whether observations that are "suspect" will be flagged. The default is`flagSuspects = FALSE`. If `flagSuspects = TRUE`, then a column called "Suspect" is added to the output data.frame. Any suspect observations get a "TRUE" in the "Suspect" column, while non-suspect observations receive a "FALSE". There are two ways that an observation can be classified as "suspect". First, if two consecutive observations have the same trackID, but the observation in year t+1 is less that a certain percentage (defined by the `shrink` arg.) of the observation in year t, it is possible that the observation in year t+1 is a new recruit and not the same individual. The second way an observation can be classified as "suspect" is if it is very small before going dormant. It is unlikely that a very small individual will survive dormancy, so it is possible that the function has mistakenly given a survival value of "1" to this individual. A "very small individual" is any observation with an area below a certain percentile (specified by `dormSize`) of the size distribution for this species, which is generated using all of the size data for this species in `dat`. If you are using the output dataset for  demographic analysis, you may want to exclude "Suspect" observations. If `flagSuspects = FALSE`, then no additional column is added. 
@@ -549,7 +549,7 @@ ___
 <a id="getNeigh"></a> 
 
 ### *3* Calculate local neighborhood density using `getNeighbors()`
-It is often useful in demographic analyses to have some idea of the competition (or facilitation) that an individual organism is dealing with. Interactions between individuals can have a profound impact on whether an organism survives and grows. Spatial datasets of plant occurrence allow us to generate an estimate of the interactions an individual plant has with other plants by determining how many other individuals occupy the "local neighborhood" of each focal plant. While this isn't a direct measure ofcompetition or facilitation, it gives us an estimate that we can include in demographic models.
+It is often useful in demographic analyses to have some idea of the competition (or facilitation) that an individual organism is dealing with. Interactions between individuals can have a profound impact on whether an organism survives and grows. Spatial datasets of plant occurrence allow us to generate an estimate of the interactions an individual plant has with other plants by determining how many other individuals occupy the "local neighborhood" of each focal plant. While this isn't a direct measure of competition or facilitation, it gives us an estimate that we can include in demographic models.
 
 Here is the generic `getNeighbors()` function: 
 ```r
