more spelling fixes

--- a/README.Rmd
+++ b/README.Rmd
@@ -96,7 +96,7 @@ Below are the basic requirements for these data objects.
                               
 *  ... be an `sf` data.frame. More on this below in section [*1.1.1*](#dat_to_sf)...
 *  ... contain a row for each individual observation in each year. 
-*  ... have a column that contains character strings indicating the specific pithet for each observation. This column must be a character data type. The function expects this column to be called "Species", but a different name can be specified in function calls. 
+*  ... have a column that contains character strings indicating the specific epithet for each observation. This column must be a character data type. The function expects this column to be called "Species", but a different name can be specified in function calls. 
 *  ... have a column that contains character strings indicating the site at which each observation was collected. This is a level of classification "above" the quadrat (i.e. all quadrats measured at the Central Plains Experimental Range in Nunn, CO might have the value "CO" in this column). This column must be a character data type. The function expects this column to be called "Site", but a different name can be specified in function calls. 
 *  ... have a column that contains character strings indicating the quadrat at which each observation was collected. This column must be a character data type. The function expects this column to be called "Quad", but a different name can be specified in function calls. 
 *  ... have a column that contains a value indicating the year when this individual observation was collected. This must be a numeric data type, and must be either a four or two digit year number. The function expects this column to be called "Year", but a different name can be specified in function calls. 
