--- a/vignettes/Suggested_plantTracker_Workflow.Rmd
+++ b/vignettes/Suggested_plantTracker_Workflow.Rmd
@@ -275,7 +275,7 @@ don't put an 'NA' in `inv` for that year! Instead, just skip that year.
 Here is an example of an `inv` argument that corresponds to the example `dat` 
 argument above. The quadrats that have data in `dat` are "SG2" and "SG4",  so 
 there are elements in `inv` that correspond to each of these quadrats. 
-```{r echo=FALSE, fig.align='center', fig.cap = "**Figure 1.2**: *An example of the `inv` argument*"}
+```{r echo=FALSE, fig.align='center'}
 (inv <- grasslandInventory[c( "SG2", "SG4")])
 ```
 
