--- a/README.Rmd
+++ b/README.Rmd
@@ -40,15 +40,18 @@ Welcome to `plantTracker`! This package was designed to transform **long-term qu
 
 ## Installation
 
-You can install the current version of `plantTracker` from 
+`plantTracker` is on
+[CRAN](https://CRAN.R-project.org/package=plantTracker), and installed with:
+``` r
+install.packages("plantTracker")
+```
+
+Alternatively, you can install the current version of `plantTracker` from 
 [GitHub](https://github.com/) with: 
 ``` r
 install.packages("devtools")
 devtools::install_github("aestears/plantTracker")
 ```
-
-`plantTracker` will also be available to download form CRAN in the near future,
-so stay tuned! 
 
 <a id="issues"></a>     
                               
