--- a/README.Rmd
+++ b/README.Rmd
@@ -13,6 +13,16 @@ knitr::opts_chunk$set(
 )
 ```
 
+<!-- badges: start -->
+[![CRAN status](https://www.r-pkg.org/badges/version/plantTracker)](https://CRAN.R-project.org/package=plantTracker)
+[![check-standard](https://github.com/aestears/plantTracker/actions/workflows/check-standard.yaml/badge.svg)](https://github.com/aestears/plantTracker/actions/workflows/check-standard.yaml)
+[![test-coverage](https://github.com/aestears/plantTracker/actions/workflows/test-coverage.yaml/badge.svg)](https://github.com/aestears/plantTracker/actions/workflows/test-coverage.yaml)
+
+[![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg)](https://opensource.org/licenses/MIT)
+[![DOI](https://zenodo.org/badge/353094728.svg)](https://zenodo.org/badge/latestdoi/353094728)
+<!-- badges: end -->
+
+
 # `plantTracker`
 Welcome to `plantTracker`! This package was designed to transform **long-term quadrat maps** that show plant occurrence and size into **demographic data** that can be used to answer questions about population and community ecology. 
 
@@ -39,15 +49,14 @@ Welcome to `plantTracker`! This package was designed to transform **long-term qu
 <a id="Installation"></a>
 
 ## Installation
-
-`plantTracker` is on
-[CRAN](https://CRAN.R-project.org/package=plantTracker), and installed with:
+Install `plantTracker` from 
+[CRAN](https://CRAN.R-project.org/package=plantTracker):
 ``` r
 install.packages("plantTracker")
 ```
 
 Alternatively, you can install the current version of `plantTracker` from 
-[GitHub](https://github.com/) with: 
+[GitHub](https://github.com/): 
 ``` r
 install.packages("devtools")
 devtools::install_github("aestears/plantTracker")
@@ -63,8 +72,6 @@ Please report any problems that you encounter while using `plantTracker` as "iss
 ## License
 This package is licensed under MIT License
 Copyright (c) 2022 Alice Stears
-
-[![DOI](https://zenodo.org/badge/353094728.svg)](https://zenodo.org/badge/latestdoi/353094728)
 
 <a id="contact"></a>
 
